# seo-bot-standalone

./: .env.development  .env.example  .env.local.example  .env.staging  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md
backend/: alembic.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py
backend/migrations/: env.py
backend/src/seo_bot/: __init__.py  cli.py  config.py  db.py  health.py  logging.py  models.py
backend/src/seo_bot/adapters/cms/: __init__.py  base.py  contentful.py  markdown.py  wordpress.py
backend/src/seo_bot/api/: health.py  main.py
backend/src/seo_bot/api/v1/: __init__.py  analytics.py  auth.py  dashboard.py  jobs.py  keywords.py  projects.py
backend/src/seo_bot/backup/: __init__.py  export_system.py
backend/src/seo_bot/content/: __init__.py  brief_generator.py  expertise.py  stc_check.py
backend/src/seo_bot/ctr/: __init__.py  statistical_tests.py
backend/src/seo_bot/governance/: __init__.py  quality.py
backend/src/seo_bot/jobs/: __init__.py  analytics_tasks.py  content_tasks.py  keyword_tasks.py  monitoring_tasks.py
backend/src/seo_bot/keywords/: README.md  __init__.py  cluster.py  discover.py  prioritize.py  score.py  serp_gap.py
backend/src/seo_bot/linking/: __init__.py  entities.py
backend/src/seo_bot/local/: __init__.py  ai_content_generator.py  citation_management.py  gbp_automation.py  multi_platform_seo.py  review_management.py  zero_click_optimization.py
backend/src/seo_bot/middleware/: api_gateway.py  auth.py  rate_limiting.py
backend/src/seo_bot/monitor/: __init__.py  alerts.py  coverage.py  dashboard.py
backend/src/seo_bot/prune/: __init__.py  optimization.py
backend/src/seo_bot/publishing/: __init__.py  pipeline.py  quality_gates.py
backend/src/seo_bot/research/: __init__.py  cli_commands.py  models.py  normalize.py  publish.py  sources.py
backend/src/seo_bot/services/: competitor_analysis_automation.py  content_automation.py  conversion_optimization_automation.py  input_mapping.py  keyword_automation.py  link_building_automation.py  local_seo_automation.py  service_button_mapping.py  technical_seo_automation.py
backend/src/seo_bot/tech/: __init__.py  accessibility.py  audit.py  budgets.py  monitoring.py
backend/src/seo_bot/tools/: __init__.py  cli_commands.py  evaluator.py  generator.py  models.py  registry.py
backend/src/seo_bot/tools/templates/: calculator.tsx.j2
backend/src/seo_bot/utils/: __init__.py  http.py  metrics.py  notifications.py  validation.py
backend/tests/: test_clustering.py  test_ctr_statistical.py  test_framework.py  test_governance_quality.py  test_keywords.py  test_keywords_integration.py  test_monitor_alerts.py  test_monitor_coverage.py  test_monitor_dashboard.py  test_prioritization.py  test_prune_optimization.py  test_utils_metrics.py  test_utils_notifications.py  test_utils_validation.py
docs/: README.md  README_NEW.md  clustering-prioritization.md  deployment.md  getting-started.md  (+3 more)
(+112 files in other folders)
